--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-
+<!--
 <div class="container">
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel"  >
         <div class="carousel-inner">
@@ -119,7 +119,37 @@
 </div>
 
 
+-->
 
+<div class="container">
+
+    <div class="top-section">
+        <img class="top-img" src="../../../assets/images/59-594145_blue-wave-vector-png-sky-blue-wave-png.png" alt="blue">
+    </div>
+    <div class="box-holder">
+       <a href='#'>
+           <div class="Box" id="events">
+                <h1>Events</h1>
+            </div>
+        </a> 
+       <a href="#">
+           <div class="Box"  id="Statics">
+                <h1>Statics</h1>
+            </div>
+        </a> 
+
+        <a href="#">
+            <div class="Box"  id="gifts">
+                <h1>Gifts</h1>
+            </div>
+        </a>
+        <a href="#">
+            <div class="Box"  id="Descution-page">
+                <h1>Discution</h1>
+            </div>
+        </a>
+    </div>
+</div>
 
 
 
