--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,8 +1,11 @@
 <div class="container">
+    <div class="top-section">
+        <img class="top-img" src="../../../assets/images/59-594145_blue-wave-vector-png-sky-blue-wave-png.png" alt="blue">
+    </div>  
     <div class="shareLocation">
         <div class="description-container">
             <div class="image">  
-                <img src="assets/images/homeless.jpeg" alt="homeless-image" class="image">
+                <img src="assets/images/homeless.jpeg" alt="homeless-image" class="img">
             </div>
             <div class="description">
                 <p>Share Location and help people</p>
@@ -14,7 +17,7 @@
     <div class="donationForm">
         <div class="description-container">
             <div class="image">  
-                <img src="assets/images/donation-box-100221101-large.jpg" alt="Donation-image" class="image">
+                <img src="assets/images/donation-box-100221101-large.jpg" alt="Donation-image" class="img">
             </div>
             <div class="description">
                 <p>Fill The Form And Donate For People Who Needs You ! </p>
