--- a/src/app/components/navigation/navigation.component.css
+++ b/src/app/components/navigation/navigation.component.css
@@ -4,8 +4,12 @@
     left: 0;
     width: 100%;
     height: 55px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-    background-color: #000000b4;
+    background: rgba( 255, 255, 255, 0.25 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
     display: flex;
     flex-wrap: wrap ; 
     overflow-x: auto;
@@ -21,13 +25,12 @@
     white-space: nowrap;
     font-family: sans-serif;
     font-size: 13px;
-    color: #fff9f9;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
 .nav__link:hover {
     background-color: #000000b4;
-    color: rgb(255, 230, 0);
 }
 
 .nav__link--active {
