--- a/src/app/components/post/post.component.css
+++ b/src/app/components/post/post.component.css
@@ -4,7 +4,7 @@
     right: 0px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 
     background: rgba( 255, 255, 255, 0.75 );
@@ -22,10 +22,11 @@
   top: 0px;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
 }
 .shareLocation,.donationForm{
   position: absolute;
-  top: 10px;
+  top: 50px;
   height: 300px;
   width: 90%;
   background: rgba( 255, 255, 255, 0.75 );
@@ -37,6 +38,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center; 
+  
 }
 
 .description{
@@ -55,13 +57,29 @@ button{
 }
 
 .donationForm{
-  top: 350px;
+  top: 350px;margin-top: 20px;
 }
 
 .image{
   box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.589); 
 }
-.image{
+.img{
  height: 200px;
  width: 100%;
+ opacity: 0.8;
+ zoom: 0%;
 }
+.img:hover{
+zoom: 10;
+}
+
+.top-img{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 400px;
+  z-index: -200;
+  transform: rotate(180deg);
+}
+
