--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -1,13 +1,104 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+
+/* animation */ 
+*{margin:0;padding:0;box-sizing:border-box;}
+
+h1{
+   font-size:3.2em;
+   font-weight:400;
+
 }
+
+.circle{
+   position:fixed;
+   animation-fill-mode:both;
+   transition:transform 3s;
+   background: rgba(224, 211, 30, 0.479);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+.circle:active  {
+   transform:scale(2);
+}
+#circle1 {
+     height:100px; width:100px;
+     top:-50px; left:-30px;
+     z-index: -2;
+     animation:amimation1 5s ease-in-out -2s infinite both;
+}
+#circle2 {
+      height:180px; width:180px;
+      background: linear-gradient(rgba(187, 162, 22, 0.9), rgba(40, 188, 214, 0.75));
+      right:-50px;top:30px;
+      z-index:2;
+      animation:amimation1 8s ease-in-out -4s infinite both;
+}
+#circle3 {
+      height:90px; width:90px;
+      top:180px; right:-45px;
+      background: linear-gradient(rgba(231, 219, 48, 0.95), rgba(38, 153, 173, 0.75));
+
+      animation:amimation1 9s ease-in-out 0s infinite both;
+}
+#circle4 {
+      height:140px; width:140px;
+      top:230px; left:-50px;
+      animation:amimation1 7s ease-in-out -1s infinite both;
+}
+#circle5 {
+     background: linear-gradient(rgba(226, 207, 31, 0.9), rgba(214, 173, 40, 0.75));
+     height:50px; width:50px;
+     right:50px; top:50vh;
+    animation:amimation1 10s ease-in-out -3s infinite both;
+}
+#circle6 {
+     height:150px; width:150px;
+     left:70px; bottom:170px;
+     animation:amimation1 10s ease-in-out -6s infinite both;
+}
+#circle7 {
+     height:80px; width:80px;
+     bottom:10px; left:-10px;
+     background: linear-gradient(rgba(231, 219, 48, 0.95), rgba(38, 153, 173, 0.75));
+
+     animation:amimation1 10s ease-in-out -8s infinite both;
+}
+#circle8 {
+     background: linear-gradient(rgba(86, 229, 248, 0.95), rgba(247, 205, 20, 0.75));
+     height:190px; width:190px;
+     right:-30px; bottom:-70px;
+     animation:amimation1 5s ease-in-out -1s infinite both;
+}
+@keyframes amimation1{
+   0%{
+     transform:translateX(0px) translateY(0px);
+   }
+   25%{
+     transform:translateX(-10px) translateY(5px);
+   }
+   50%{
+     transform:translateX(0px) translateY(-10px);
+   }
+   75%{
+     transform:translateX(10px) translateY(5px);
+   }
+   100%{
+     transform:translateX(0px) translateY(0px);
+   }
+
+}
+
+/* end animation */ 
+
 .container{
     position: relative;
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 a{
@@ -19,17 +110,7 @@ a:hover{
     color: rgb(70, 64, 13);
   
 }
-.circle{
-    background-image: url('/GscApp-main/src/assets/images/Untitled_design.png');
-    height: 300px;
-    width: 200%;
-    position: fixed;
-    top: 0px;
-    transform: rotate(180deg);
-    display: flex;
-    justify-self: center;
 
-}
 .mail{
     width: 220px;
     right: 10px;
@@ -40,8 +121,8 @@ a:hover{
 }
 
 .authBox{
-    width: 300px;
-    height: 450px;
+    width: 90%;
+    height: 550px;
 
     display: flex;
     flex-direction: column;
@@ -51,15 +132,15 @@ a:hover{
 
     position: absolute;
     justify-self: center;
-    top: 50px;
+    top: 150px;
     
-
+    z-index: 10;
     background: rgba( 255, 255, 255, 0.25 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 4px );
--webkit-backdrop-filter: blur( 4px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 .formGroup{
     display: flex;
@@ -93,14 +174,25 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .loginWithGoogle{
-    width: 40px;
-    height: 30px;
-    font-size: 10px;
+   
     border-radius: 10px;
+    background-color: transparent ;   
 }
 
-svg{
-    overflow-x: auto;
-    width: 35px;
-    height: 30px;
+.logo-img{
+    position: absolute;
+    top: 30px;
+    height: 100px;
+    width: 100px;
+    z-index: 11;
+    background-color: rgba(43, 43, 44, 0.473);
+    border-radius: 90px;
+    margin-bottom: 10px;
+}
+.logo{
+   
+    position: relative;
+    display: flex;
+    justify-content: center;
+
 }
