--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,11 +1,22 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 crossorigin="anonymous">
-
+<div class="logo">
+    <img src="../../../assets/images/icon-256x256.png" class="logo-img" alt="">
+</div>
 <div class="container">
-    <div class="circle">
-        
+   
+    <div class="animation-container">
+        <div class="circle" id="circle1"  ></div>
+        <div class="circle" id="circle2"  ></div>
+        <div class="circle" id="circle3"  ></div>
+        <div class="circle" id="circle4"  ></div>
+        <div class="circle" id="circle5"  ></div>
+        <div class="circle" id="circle6"  ></div>
+        <div class="circle" id="circle7"  ></div>
+        <div class="circle" id="circle8"  ></div>
     </div>
+    
     <div class="authBox">
         <h4>Sign in </h4>
         <div class="formGroup">
