--- a/src/app/components/sign-up/sign-up.component.css
+++ b/src/app/components/sign-up/sign-up.component.css
@@ -1,3 +1,97 @@
+
+
+/* animation */ 
+*{margin:0;padding:0;box-sizing:border-box;}
+
+h1{
+   font-size:3.2em;
+   font-weight:400;
+
+}
+
+.circle{
+   position:fixed;
+   animation-fill-mode:both;
+   transition:transform 3s;
+   background: rgba(224, 211, 30, 0.479);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+.circle:active  {
+   transform:scale(2);
+}
+#circle1 {
+     height:100px; width:100px;
+     top:-50px; left:-30px;
+     z-index: -2;
+     animation:amimation1 5s ease-in-out -2s infinite both;
+}
+#circle2 {
+      height:180px; width:180px;
+      background: linear-gradient(rgba(187, 162, 22, 0.9), rgba(40, 188, 214, 0.75));
+      right:-50px;top:30px;
+      z-index:2;
+      animation:amimation1 8s ease-in-out -4s infinite both;
+}
+#circle3 {
+      height:90px; width:90px;
+      top:180px; right:-45px;
+      background: linear-gradient(rgba(231, 219, 48, 0.95), rgba(38, 153, 173, 0.75));
+
+      animation:amimation1 9s ease-in-out 0s infinite both;
+}
+#circle4 {
+      height:140px; width:140px;
+      top:230px; left:-50px;
+      animation:amimation1 7s ease-in-out -1s infinite both;
+}
+#circle5 {
+     background: linear-gradient(rgba(226, 207, 31, 0.9), rgba(214, 173, 40, 0.75));
+     height:50px; width:50px;
+     right:50px; top:50vh;
+    animation:amimation1 10s ease-in-out -3s infinite both;
+}
+#circle6 {
+     height:150px; width:150px;
+     left:70px; bottom:170px;
+     animation:amimation1 10s ease-in-out -6s infinite both;
+}
+#circle7 {
+     height:80px; width:80px;
+     bottom:10px; left:-10px;
+     background: linear-gradient(rgba(231, 219, 48, 0.95), rgba(38, 153, 173, 0.75));
+
+     animation:amimation1 10s ease-in-out -8s infinite both;
+}
+#circle8 {
+     background: linear-gradient(rgba(86, 229, 248, 0.95), rgba(247, 205, 20, 0.75));
+     height:190px; width:190px;
+     right:-30px; bottom:-70px;
+     animation:amimation1 5s ease-in-out -1s infinite both;
+}
+@keyframes amimation1{
+   0%{
+     transform:translateX(0px) translateY(0px);
+   }
+   25%{
+     transform:translateX(-10px) translateY(5px);
+   }
+   50%{
+     transform:translateX(0px) translateY(-10px);
+   }
+   75%{
+     transform:translateX(10px) translateY(5px);
+   }
+   100%{
+     transform:translateX(0px) translateY(0px);
+   }
+
+}
+
+/* end animation */ 
 .container{
     position: absolute;
     height: 100%;
@@ -8,9 +102,10 @@
 
 .formHolder{
     position: absolute;
-    top: 50px;
-    height: 450px;
-    width: 300px;
+    top: 150px;
+    width: 90%;
+    height: 550px;
+
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -31,17 +126,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
    
 }
 
-.circle{
-    background-image: url('/GscApp-main/src/assets/images/Untitled_design.png');
-    height: 300px;
-    width: 200%;
-    position: fixed;
-    top: 0px;
-    transform: rotate(180deg);
-    display: flex;
-    justify-self: center;
 
-}
 a{
     text-decoration: none;
     color: black;
@@ -61,3 +146,20 @@ a:hover{
 
 }
 
+.logo-img{
+    position: absolute;
+    top: 30px;
+    height: 100px;
+    width: 100px;
+    z-index: 11;
+    background-color: rgba(43, 43, 44, 0.473);
+    border-radius: 90px;
+    margin-bottom: 10px;
+}
+.logo{
+   
+    position: relative;
+    display: flex;
+    justify-content: center;
+
+}
