--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -1,7 +1,18 @@
-<div class="container">
-  <div class="circle">
-        
+<div class="logo">
+  <img src="../../../assets/images/icon-256x256.png" class="logo-img" alt="">
 </div>
+<div class="container">
+  <div class="animation-container">
+    <div class="circle" id="circle1"  ></div>
+    <div class="circle" id="circle2"  ></div>
+    <div class="circle" id="circle3"  ></div>
+    <div class="circle" id="circle4"  ></div>
+    <div class="circle" id="circle5"  ></div>
+    <div class="circle" id="circle6"  ></div>
+    <div class="circle" id="circle7"  ></div>
+    <div class="circle" id="circle8"  ></div>
+</div>
+
   <div class="formHolder">
         <h4>SignUp</h4>
       <div class="name-container">
